Old kernel test 4d4f6ba338b0f76c32bc372194c3726bf04c4e22

--- a/arch/riscv/configs/revyos_defconfig
+++ b/arch/riscv/configs/revyos_defconfig
@@ -258,6 +258,7 @@ CONFIG_DRM_PANEL_SIMPLE=y
 CONFIG_DRM_PANEL_ILITEK_ILI9881C=y
 CONFIG_DRM_PANEL_ILI9881D=y
 CONFIG_DRM_PANEL_HX8394=y
+CONFIG_DRM_PANEL_JADARD_JD9365DA_H3=y
 CONFIG_DRM_VERISILICON=y
 CONFIG_DRM_POWERVR_ROGUE=m
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
